--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -46,7 +46,9 @@
    "id": "723d69c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
   }
  ],
  "metadata": {
