--- a/Linear Regression/LinearRegression.ipynb
+++ b/Linear Regression/LinearRegression.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "efdd7136",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "Text(0.5, 1.0, 'Linear Regression using Sklearn')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -128,7 +128,7 @@
    ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "model = LinearRegression()\n",
+    "model = LinearRegression(fit_intercept=True)\n",
     "model.fit(X.reshape(-1, 1), y)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "9cc56c51",
    "metadata": {},
    "outputs": [
@@ -163,6 +163,16 @@
     "\n",
     "print(\"Sklearn intercept:\\t\", model.intercept_)\n",
     "print(\"From scratch intercept:\\t\", bo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "865aec9c",
+   "metadata": {},
+   "source": [
+    "https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#\n",
+    "\n",
+    "you can check out the document from sklearn on LinearRegression"
    ]
   }
  ],
