--- a/NaiveBayes.ipynb
+++ b/NaiveBayes.ipynb
@@ -1,22 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "4c49874f",
+   "cell_type": "markdown",
+   "id": "f4ea9fe8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n"
+    "nothing much to code in this alog.."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c70e044",
+   "cell_type": "markdown",
+   "id": "41f9d670",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "i will add the notes for you references and all set!!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d24598c",
+   "metadata": {},
    "source": []
   }
  ],
