--- a/TITANIC/Applying DecsionTree.ipynb
+++ b/TITANIC/Applying DecsionTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "f8afa15f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "6c02b6d2",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "41cfc6ae",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4  Barre, Co Washington, VT         0  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "d235f871",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "975476fd",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "e8ee9220",
    "metadata": {},
    "outputs": [
@@ -239,21 +239,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Abid.MD\\AppData\\Local\\Temp\\ipykernel_11736\\2725343132.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Abid.MD\\AppData\\Local\\Temp\\ipykernel_26860\\2725343132.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df['age'].fillna(df['age'].mean(),inplace=True)\n",
-      "C:\\Users\\Abid.MD\\AppData\\Local\\Temp\\ipykernel_11736\\2725343132.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Abid.MD\\AppData\\Local\\Temp\\ipykernel_26860\\2725343132.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df['embarked'].fillna(df['embarked'].mode()[0],inplace=True)\n",
-      "C:\\Users\\Abid.MD\\AppData\\Local\\Temp\\ipykernel_11736\\2725343132.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Abid.MD\\AppData\\Local\\Temp\\ipykernel_26860\\2725343132.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "a821c3fd",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "id": "78b54732",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "fe8b21ec",
    "metadata": {},
    "outputs": [
@@ -355,15 +355,12 @@
     "print(\"Best Parameters:\", grid.best_params_)\n",
     "best_model = grid.best_estimator_\n",
     "\n",
-    "\n",
-    "y_pred=best_model.predict(X_test)\n",
-    "\n",
-    "\n"
+    "y_pred=best_model.predict(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "79f5e6a6",
    "metadata": {},
    "outputs": [
