--- a/Boston/ApplyingLinearRegression.ipynb
+++ b/Boston/ApplyingLinearRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "9637474c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "e6619338",
    "metadata": {},
    "outputs": [
@@ -145,22 +145,17 @@
        "</div>"
       ],
       "text/plain": [
-       "      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE     DIS  RAD    TAX  \\\n",
-       "0  0.00632  18.0   2.31     0  0.538  6.575  65.2  4.0900    1  296.0   \n",
-       "1  0.02731   0.0   7.07     0  0.469  6.421  78.9  4.9671    2  242.0   \n",
-       "2  0.02729   0.0   7.07     0  0.469  7.185  61.1  4.9671    2  242.0   \n",
-       "3  0.03237   0.0   2.18     0  0.458  6.998  45.8  6.0622    3  222.0   \n",
-       "4  0.06905   0.0   2.18     0  0.458  7.147  54.2  6.0622    3  222.0   \n",
+       "      CRIM    ZN  INDUS  CHAS    NOX  ...    TAX  PTRATIO       B  LSTAT  MEDV\n",
+       "0  0.00632  18.0   2.31     0  0.538  ...  296.0     15.3  396.90   4.98  24.0\n",
+       "1  0.02731   0.0   7.07     0  0.469  ...  242.0     17.8  396.90   9.14  21.6\n",
+       "2  0.02729   0.0   7.07     0  0.469  ...  242.0     17.8  392.83   4.03  34.7\n",
+       "3  0.03237   0.0   2.18     0  0.458  ...  222.0     18.7  394.63   2.94  33.4\n",
+       "4  0.06905   0.0   2.18     0  0.458  ...  222.0     18.7  396.90   5.33  36.2\n",
        "\n",
-       "   PTRATIO       B  LSTAT  MEDV  \n",
-       "0     15.3  396.90   4.98  24.0  \n",
-       "1     17.8  396.90   9.14  21.6  \n",
-       "2     17.8  392.83   4.03  34.7  \n",
-       "3     18.7  394.63   2.94  33.4  \n",
-       "4     18.7  396.90   5.33  36.2  "
+       "[5 rows x 14 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "e51e6917",
    "metadata": {},
    "outputs": [
@@ -196,7 +191,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "ec7d9cbd",
    "metadata": {},
    "outputs": [
@@ -241,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "id": "ec98924d",
    "metadata": {},
    "outputs": [],
@@ -251,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "2b93478e",
    "metadata": {},
    "outputs": [
@@ -293,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "e46d933d",
    "metadata": {},
    "outputs": [
@@ -324,6 +319,138 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5ae3aea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Mean Squared Error: 28.239803921568626\n",
+      "Decision Tree R^2 Score: 0.6149141268243243\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "dt = DecisionTreeRegressor(random_state=42)\n",
+    "\n",
+    "dt.fit(X_train,y_train)\n",
+    "y_pred_dt=dt.predict(X_test)\n",
+    "mse_dt=mean_squared_error(y_test,y_pred_dt)\n",
+    "r2_dt=r2_score(y_test,y_pred_dt)\n",
+    "print(f'Decision Tree Mean Squared Error: {mse_dt}')\n",
+    "print(f'Decision Tree R^2 Score: {r2_dt}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "140bdecc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Mean Squared Error: 9.458751470588233\n",
+      "Random Forest R^2 Score: 0.8710178165783506\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred_rf = rf.predict(X_test)\n",
+    "mse_rf = mean_squared_error(y_test, y_pred_rf)\n",
+    "r2_rf = r2_score(y_test, y_pred_rf)\n",
+    "print(f'Random Forest Mean Squared Error: {mse_rf}')\n",
+    "print(f'Random Forest R^2 Score: {r2_rf}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "20bd6ffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient Boosting Mean Squared Error: 9.29067659623178\n",
+      "Gradient Boosting R^2 Score: 0.8733097326245883\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "gdr=GradientBoostingRegressor(n_estimators=100, learning_rate=0.1, random_state=42)\n",
+    "gdr.fit(X_train, y_train)\n",
+    "y_pred_gdr=gdr.predict(X_test)\n",
+    "mse_gdr=mean_squared_error(y_test,y_pred_gdr)\n",
+    "r2_gdr=r2_score(y_test,y_pred_gdr)\n",
+    "print(f'Gradient Boosting Mean Squared Error: {mse_gdr}')\n",
+    "print(f'Gradient Boosting R^2 Score: {r2_gdr}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "914d2cb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Mean Squared Error: 5.812034474023672\n",
+      "XGBoost R^2 Score: 0.9207454705927641\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "xgb = XGBRegressor(objective='reg:squarederror', n_estimators=100, random_state=42)\n",
+    "xgb.fit(X_train, y_train)\n",
+    "y_pred_xgb = xgb.predict(X_test)\n",
+    "mse_xgb = mean_squared_error(y_test, y_pred_xgb)\n",
+    "r2_xgb = r2_score(y_test, y_pred_xgb)\n",
+    "print(f'XGBoost Mean Squared Error: {mse_xgb}')\n",
+    "print(f'XGBoost R^2 Score: {r2_xgb}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b9b0a917",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVR Mean Squared Error: 21.391343806848486\n",
+      "SVR R^2 Score: 0.708301646458324\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "svr = SVR(kernel='rbf')\n",
+    "svr.fit(X_train, y_train)\n",
+    "y_pred_svr = svr.predict(X_test)\n",
+    "mse_svr = mean_squared_error(y_test, y_pred_svr)\n",
+    "r2_svr = r2_score(y_test, y_pred_svr)\n",
+    "print(f'SVR Mean Squared Error: {mse_svr}')\n",
+    "print(f'SVR R^2 Score: {r2_svr}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35ca6751",
    "metadata": {},
    "outputs": [],
    "source": []
