--- a/Boston/ApplyingLinearRegression.ipynb
+++ b/Boston/ApplyingLinearRegression.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e46d933d",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
     "plt.xlabel(\"Predicted Values\")\n",
     "plt.ylabel(\"Residuals\")\n",
     "plt.title(\"Residual Plot\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -446,14 +446,6 @@
     "print(f'SVR Mean Squared Error: {mse_svr}')\n",
     "print(f'SVR R^2 Score: {r2_svr}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35ca6751",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
