--- a/TITANIC/ApplyingNaiveBayes.ipynb
+++ b/TITANIC/ApplyingNaiveBayes.ipynb
@@ -467,6 +467,20 @@
     "plt.legend(loc=4)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3307f0f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evalution_metrics(actual, pred):\n",
+    "    accuracy = accuracy_score(actual, pred)\n",
+    "    cm = confusion_matrix(actual, pred)\n",
+    "    report = classification_report(actual, pred)\n",
+    "    return accuracy, cm, report"
+   ]
   }
  ],
  "metadata": {
