--- a/TITANIC/ApplyingKNN.ipynb
+++ b/TITANIC/ApplyingKNN.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "id": "8c2e7da6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
