--- a/DecsionTree.ipynb
+++ b/DecsionTree.ipynb
@@ -1,14 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ce7a2ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "language_info": {
    "name": "python"
