--- a/Notes/Linear Regression.ipynb
+++ b/Notes/Linear Regression.ipynb
@@ -2,30 +2,54 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "793d7845",
+   "id": "daec0123",
    "metadata": {},
    "source": [
-    "implementing linear regression using sklearn"
+    "if we consider a linear regression model there are two ways to traina Linear Regression moel they are\n",
+    "1. using direct \"closed-form\" equation that directly computes the model parameters that perfectly fits the traning set\n",
+    "2. using an iterative optimization approach called gradient descent (GD) that gradually twearks the model to the best parameters as the first method\n",
+    "\n",
+    "linear regression is used on linear datasets where are Polynomial regression model  is used on non linear regression models\n",
+    "\n",
+    "linear regression model basicly is the sum of weighted features and added bias term\n",
+    "\n",
+    "y_hat=b0+b1*x1+b2*x2+....bn*xn\n",
+    "\n",
+    "where\n",
+    "y_hat is predicted value\n",
+    "b0 is bias\n",
+    "xi is feature i\n",
+    "bi is model parameter\n",
+    "\n",
+    "in vector form \n",
+    "y_hat=h0(X)=0.X\n",
+    ". is dot product\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "251866b7",
+   "cell_type": "markdown",
+   "id": "08585cfc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression"
+    "model traning part\n",
+    "\n",
+    "as the model is s Regression miodel we need a evalutaion metric\n",
+    "we need RMSE(Root Mean Square Error)\n",
+    "\n",
+    "to train our model we simply need  find the value of 0 to minimize our MSE.\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92ab40e2",
+   "cell_type": "markdown",
+   "id": "c33be6c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "MSE"
+   ]
   }
  ],
  "metadata": {
